# envleaks

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
envleaks/: __init__.py  cli.py  git_history.py  patterns.py  scanner.py
envleaks/reporters/: json_report.py  sarif.py  terminal.py
tests/: test_scanner.py
